--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "next": "15.0.3",
     "next-mdx-remote": "^5.0.0",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "rehype": "^13.0.2",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
