--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "dayjs": "^1.11.13",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.473.0",
     "next": "15.0.3",
     "next-mdx-remote": "^5.0.0",
     "react": "19.0.0-rc-66855b96-20241106",
