[chore] add tailwind-scrollbar-hide

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "rehype": "^13.0.2",
     "rehype-pretty-code": "^0.14.0",
     "shiki": "^1.26.1",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
